fixed sponsor wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -516,6 +516,7 @@ main {
   display: flex; 
   align-items: center; 
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .sponsor-img:hover {
@@ -528,7 +529,7 @@ main {
   font-style: italic;                
   font-weight: bold;             
   color: rgb(206, 50, 52);    
-  margin-right:20px;              
+  margin-right:20px;       
 }
 /* feature 
 ---------------------*/
@@ -716,6 +717,10 @@ main {
 
 .portfolio-box .portfolio-text .px-btn {
   font-size: 12px; }
+
+.portfolio-link:hover {
+  box-shadow: 3px 3px 0 0 #e0b8b8;
+}
 
 .feature-box-03 {
   border: 2px solid #373737;
